# testrk2

./: CMakeLists.txt
.github/workflows/: ci.yml
tests/: CMakeLists.txt  test_fileio.cpp  test_printable.cpp  test_standardio.cpp
